# be_capstone

./: .dockerignore  .gitignore  .prospector.yaml  .secrets  Dockerfile  Dockerfile.bak  Dockerfile.bak.bak  Dockerfile.traefik  LICENSE  README.md  Taskfile.yaml  docker-compose.yaml  example.envrc  pyproject.toml  traefik.toml
.codacy/: .prospector.yaml  codacy.yaml  prospector.yaml
.github/workflows/: codacy-coverage-reporter.yaml  commit-check.yaml  django.yml
.task/checksum/: freeze
applications/byte_patrol/: admin.py  apps.py  middleware.py  models.py  signals.py  test_urls.py  tests.py  urls.py
applications/byte_patrol/management/commands/: add_ip_to_allowlist.py
applications/byte_patrol/migrations/: 0001_initial.py
applications/resturant/: admin.py  apps.py  cache.py  cbv_endpoints.py  endpoints.py  filters.py  forms.py  models.py  schema.py  serializers.py  tests.py  urls.py  widgets.py
applications/resturant/management/commands/: seed.py
applications/resturant/migrations/: 0001_initial.py  0002_alter_booking_date.py  0003_booking_idx_name_menu_idx_title_and_more.py  0004_alter_booking_no_of_guests.py
applications/resturant/serializers/: auth.py  core.py
applications/resturant/tests/: test_booking_endponts.py  test_menu_endpoints.py  test_serialiazers.py  test_ssl.py
config/: settings.py  urls.py  wsgi.py
mock/: data.py
requirements/: base.txt  dev.txt
run/: manage.py
schema/: schema2025-05-10.yaml  schema2025-05-10_15:44:38.yaml  schema2025-05-10_16:42:00.yaml
templates/: 403.html  404.html  500.html  index.html
templates/django_filters/rest_framework/: form.html
templates/forms/fields/: range-slider.html
templates/forms/widgets/: range-slider.html
utils/: backends.py  cache.py  logging.py
