[tool.poetry]
name = "be-capstone"
version = "0.1.0"
description = "aptstone project for Meta's Bacekend Engineer Specilaization Offered on Cousera"
authors = ["Terry Brooks"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
loguru = "^0.7.3"
django-prometheus = "^2.3.1"
django-configurations = "^2.5.1"
drf-extensions = "^0.7.1"
cryptography = "^44.0.2"
pymysql = "^1.1.1"
drf-redesign = "^0.5.0"
mysqlclient = "^2.2.7"
drf-spectacular = {extras = ["sidecar"], version = "^0.28.0"}


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
autoflake = "^2.3.1"
django-debug-toolbar = "^5.1.0"
astroid = "^3.3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
