[tool.poetry]
name = "be-capstone"
version = "0.1.0"
description = "aptstone project for Meta's Bacekend Engineer Specilaization Offered on Cousera"
authors = ["Terry Brooks"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
loguru = "^0.7.3"
django-prometheus = "^2.3.1"
django-configurations = "^2.5.1"
drf-extensions = "^0.7.1"
cryptography = "^44.0.2"
pymysql = "^1.1.1"
drf-redesign = "^0.5.0"
mysqlclient = "^2.2.7"
drf-spectacular = {extras = ["sidecar"], version = "^0.28.0"}
djoser = "^2.3.1"
django-crispy-forms = "^2.3"
six = "^1.17.0"
django-filter = "^25.1"
crispy-bootstrap5 = "^2025.4"
autoflake = "^2.3.1"
django-storages = "^1.14.6"
whitenoise = "^6.9.0"
boto3 = "^1.38.15"
django-redis = "^5.4.0"
django-health-check = "^3.18.3"
psutil = "^7.0.0"
django-cors-headers = "^4.7.0"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
autoflake = "^2.3.1"
django-debug-toolbar = "^5.1.0"
astroid = "^3.3.9"
doppler-env = "^0.3.1"
pylint = "^3.3.7"
pylint-django = "^2.6.1"
prospector = {extras = ["with-everything"], version = "^1.17.1"}
pytest-django = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
disallow_any_generics = true
disallow_untyped_defs = true
implicit_optional = true
force_uppercase_builtins = true

[tool.pylint.MASTER]
load-plugins = ["pylint_django"]
